# vdW-GNN-SAFT

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml
data/: README.md  test1.csv  test2.csv  train_val.csv
docs/: known-issues.md  release-checklist.md  reproducing-the-paper.md
scripts/: selfcheck.py  smoke_train.py  verify_dataset.py
src/: baselines.py  build_dataset.py  evaluate.py  export_params.py  model.py  pcsaft.py  smiles2vdW_volume.py  train.py  tune.py
