[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vdw-gnn-saft"
version = "1.0.0"
description = "Physics-in-the-loop graph neural networks for ionic-liquid density via differentiable PC-SAFT, with a van der Waals volume descriptor."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10,<3.13"
keywords = [
    "ionic-liquids", "pc-saft", "graph-neural-network", "equation-of-state",
    "differentiable-physics", "density-prediction", "thermodynamics", "feos",
]
# v1.0.0 credits the lead author only; co-authors will be added in a subsequent version.
authors = [
    { name = "Cleiton S. Beraldo", email = "cleitonberaldo@alumni.usp.br" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Derived from the actual imports in src/, not from a pip freeze.
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "rdkit>=2023.9",
    "torch>=2.2",
    "torch-geometric>=2.5",
    "ogb>=1.3.6",
    "feos>=0.9,<0.10",
    "feos-torch>=0.1,<0.2",
    "si-units>=0.11",
    "ilthermopy>=1.1",      # only build_dataset.py needs it, but it imports at module level
]

[project.optional-dependencies]
# tune.py's full BOHB search. hpbandster + ConfigSpace require Python <= 3.11.
# tune.py --dry-run needs none of this.
tune = [
    "ray[tune]>=2.9",
    "ConfigSpace>=1.2",
    "hpbandster>=0.7.4",
]

[project.urls]
Homepage = "https://github.com/311cleiton/vdW-GNN-SAFT"
Repository = "https://github.com/311cleiton/vdW-GNN-SAFT"

# The nine modules import each other flat (`from model import ...`), which is how they were
# written and how the paper's runs invoked them. They are therefore installed as TOP-LEVEL
# modules rather than repackaged, so the released code is byte-for-byte the code that produced
# the results. `model`, `train`, `evaluate` etc. are generic names -- install into a dedicated
# virtual environment. Running by path (`python src/train.py`) needs no install at all.
[tool.setuptools]
package-dir = { "" = "src" }
py-modules = [
    "build_dataset",
    "smiles2vdW_volume",
    "model",
    "pcsaft",
    "train",
    "tune",
    "evaluate",
    "baselines",
    "export_params",
]
